# forge

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  DEBUG_core_balance_inputs.json  DEBUG_core_emissions_inputs.json  DEBUG_scenario_structure.json  Dockerfile  LICENSE  Makefile  README.md  TODO_LCI.md  paper.bib  paper.md  patch.diff  pyproject.toml  pytest.ini  reference_plant.py  repo_tree.txt  requirements-dev.txt  requirements-lock.txt  requirements.txt  results.json  results_validation_by_country.json  run_descriptor_checks.py  scenario_resolver.py  sector_descriptor.py  snapshot_status.txt  steel_batch_cli.py  steel_core_api_v2.py  steel_model_core.py  streamlit_app.py  streamlit_route_builder_v2.py  sweep_sensitivities.py  (+1 more)
.ipynb_checkpoints/: streamlit_app-checkpoint.py
.streamlit/: config.toml
aluminum/: emission_factors.yml  energy_int.yml  energy_matrix.yml  material_prices.yml  parameters.yml  scenario_aluminum.yml
app/: requirements.txt  streamlit_app.py
artifacts/: bar_BF-BOF.html  bar_DRI-EAF.html  bar_EAF-Scrap.html  bar_all_routes.html  sensitivity_bf_intensity.csv
aux/: .~lock.LCA_Aluminum Process 20250707.xlsx#  .~lock.aux-calc.ods#  aux-calc.ods
configs/: aluminum_cli_examples.yml  aluminum_fgv_portfolio.yml  as_cast_portfolio.yml  fgv_high.yml  fgv_regular.yml  finished_steel_portfolio.yml  finished_steel_portfolio_bf_charcoal.yml  finished_steel_portfolio_charcoal.yml  finished_steel_portfolio_eaf.yml  green_mix.yml  (+3 more)
(+306 files in other folders)
