[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forge"
version = "0.0.0"
description = "Forge core model and scenario tools"
authors = [{name = "Forge Developers", email = "dev@example.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
  "pytest==8.4.2",
  "ruff==0.14.1",
]

[tool.setuptools]
py-modules = ["steel_model_core", "steel_core_api_v2"]
